# MONAILabel

./: .dockerignore  .gitignore  .gitignore.swp  .gitmodules  .nspect-vuln-allowlist.toml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CITATION.ctf  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  ngc.sh  pyproject.toml  requirements-06122023.txt  requirements-dev.txt  requirements-min.txt  requirements.txt  run_ngc.sh  runtests.bat  runtests.sh  setup.cfg  setup.py  versioneer.py
.azure/: azure-build-test-gpu-pipeline.yml  azure-build-test-pipeline.yml  azure-release-pipeline.yml
.github/: codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: azure-build-package.yml  azure-release.yml  blossom-ci.yml  build-test-gpu.yml  build-test.yml  codeql-analysis.yml  docker-plugin.yml  docker.yml  pythonapp.yml  release.yml  weekly-preview.yml
apps/deepgrow_2d/: meta.json
apps/deepgrow_3d/: meta.json
apps/heart_app/: info.yaml  main.py  test.py
apps/my_app/: info.yaml  main.py  test.py
apps/segmentation_heart/: info.yaml  main.py
apps/segmentation_spleen/: info.yaml  main.py  meta.json  requirements.txt  test.py
apps/template/: info.yaml  main.py  test.py
clients/slicer/: CMakeLists.txt
clients/slicer/MONAILabel/: MONAILabel.py
clients/slicer/MONAILabel/Resources/UI/: MONAILabel.ui
datasets/studies/: dataset.json
docs/: Makefile  requirements.txt
docs/_static/: custom.css
docs/source/: apis.rst  appdeployment.rst  bundleTutorial.rst  conf.py  highlights.rst  index.rst  installation.rst  modules.rst  quickstart.rst  tutorials.rst  whatsnew.rst
monailabel/: __init__.py  _version.py  app.py  config.py  logging.json  main.py  monailabel  monailabel.bat  start_monai_label.sh
monailabel/client/: __init__.py  client.py
monailabel/core/: config.py
monailabel/datastore/: cvat.py  dicom.py  dsa.py  local.py  xnat.py
monailabel/deepedit/: __init__.py  custom_tensorboard_handlers.py  events.py  handler.py  handlers.py  interaction.py  transforms.py
monailabel/endpoints/: activelearning.py  batch_infer.py  datastore.py  download.py  infer.py  inference.py  info.py  login.py  logs.py  model.py  ohif.py  postproc.py  proxy.py  scoring.py  session.py  train.py  utils.py  wsi_infer.py
monailabel/interactions/: __init__.py
monailabel/interface/: __init__.py  activelearning.py  app.py  dataset.py  datastore.py  datastore_local.py  exception.py  infer.py  studies.py  studies_local.py  test.py  train.py
monailabel/interfaces/: __init__.py  activelearning.py  app.py  config.py  datastore.py  datastore_local.py  exception.py  tasks.py  test.py
monailabel/sam2/: infer.py  utils.py
monailabel/scribbles/: infer.py  transforms.py  utils.py
monailabel/scripts/: monailabel  monailabel.bat  run_app.bat  run_app.sh  run_monailabel_app.bat  run_monailabel_app.sh  run_monailabel_user_app.bat  run_monailabel_user_app.sh  user-requirements.txt
monailabel/static/: .gitignore
monailabel/tools/: validate_tta.py
monailabel/transform/: cache.py  crop.py  interactions.py  post.py  pre.py  reader.py  writer.py
monailabel/utils/: app_utils.py  class_utils.py  enums.py  generic.py  sessions.py
plugins/: README.md
plugins/cellprofiler/: README.md  runvista2d.py  test_runvista2d.py
plugins/cvat/: README.md  deploy.sh  detector.py  interactor.py  main.py  tracker.py
plugins/dsa/: Dockerfile  README.md
plugins/mitk/: CMakeLists.txt  README.md
plugins/ohif/: .gitignore  README.md  build.sh  orthanc.sh  requirements.sh
plugins/ohifv3/: .gitignore  README.md  build.sh  extensions.patch  requirements.sh  run.sh
plugins/ohifv3_bk/: requirements.sh  run.sh
plugins/qupath/: .gitignore  CHANGELOG.md  README.md  build.gradle  settings.gradle
plugins/qupath-extension-monailabel/: README.md  build.gradle
plugins/slicer/: CMakeLists.txt  README.md
plugins/slicer/MONAILabel/: CMakeLists.txt  MONAILabel.py  client.py
plugins/slicer/MONAILabel/MONAILabelLib/: __init__.py  client.py  labelcolors.py
plugins/slicer/MONAILabel/Resources/UI/: LoginDialog.ui  MONAILabel.ui
plugins/slicer/MONAILabelReviewer/: CMakeLists.txt  MONAILabelReviewer.py  README.md
plugins/slicer/MONAILabelReviewer/.qt_for_python/uic/: MONAILabelReviewer.py
plugins/slicer/MONAILabelReviewer/MONAILabelReviewerLib/: DataStoreKeys.py  ImageData.py  ImageDataController.py  ImageDataExtractor.py  ImageDataStatistics.py  JsonParser.py  MONAILabelReviewerEnum.py  MonaiServerREST.py  SegmentationMeta.py  __init__.py
plugins/slicer/MONAILabelReviewer/Resources/: MONAILabelReviewer.py
plugins/slicer/MONAILabelReviewer/Resources/UI/: DialogInfo.py  DialogInfo.ui  MONAILabelReviewer.ui
plugins/slicer/MONAILabelReviewer/ReviewerLibs/: DataStoreKeys.py  ImageData.py  ImageDataController.py  ImageDataExtractor.py  JsonParser.py  MONAILabelReviewerEnum.py  MONAILabelReviewerLogic.py  MonaiServerREST.py  SegmentationMeta.py
plugins/slicer/MONAILabelReviewer/Testing/: CMakeLists.txt
plugins/slicer/MONAILabelReviewer/Testing/Python/: CMakeLists.txt
plugins/slicer/MONAILabelReviewer/UnitTests/: ImageDataControllerTest.py  ImageDataExtractorTest.py  ImageDataTest.py  JsonParserTest.py  MonaiServerRESTTest.py
plugins/slicer/MONAILabelReviewer/UnitTests/TestDataSet/: test_datastore_v2_image_with_multiple_versions.json  test_datastore_v2_image_with_segmentation.json  test_datastore_v2_image_without_segmentation.json  test_json_datastore_v2.json
sample-apps/: README.md
sample-apps/amalgamation/: README.md  main.py
sample-apps/deepedit/: README.md  main.py  validate_TTA.py
sample-apps/deepedit_brain-tumour/: info.yaml  main.py  test.py
sample-apps/deepedit_brain_tumor/: README.md  info.yaml  main.py  test.py
sample-apps/deepedit_brain_ventricle/: README.md  info.yaml  main.py  test.py
sample-apps/sam/: main.py  (+1 more)
server/: logging.json  main.py  server-config.yaml  start_monai_label.sh
tests/: prepare_htj2k_test_data.py  setup.py  test_advanced.py  test_basic.py
(+930 files in other folders)
