[build-system]
requires = [
  "wheel",
  "setuptools",
  "torch>=1.7",
  "ninja",
]

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
  /(
    # exclude a few common directories in the root of the project
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytype
    | _build
    | buck-out
    | build
    | dist
    | plugins/ohif
  )/
  # also separately exclude a file named versioneer.py
  | monailabel/_version.py
  | plugins/ohif
)
'''

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "ERROR"
log_cli_format = "[%(threadName)s] [%(levelname)s] (%(name)s:%(lineno)d) %(message)s"

#log_file = "pytest.log"
#log_file_level = "INFO"
#log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
#log_file_date_format = "%Y-%m-%d %H:%M:%S"
