# Copyright (c) MONAI Consortium
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = monailabel
author = MONAI Consortium
author_email = monai.contact@gmail.com
url = https://monai.io/
description = Active Learning Toolkit for Healthcare Imaging
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
license = Apache License 2.0
license_files =
    LICENSE
project_urls =
    Documentation=https://docs.monai.io/
    Bug Tracker=https://github.com/Project-MONAI/MONAILabel/issues
    Source Code=https://github.com/Project-MONAI/MONAILabel

[options]
python_requires = >= 3.7
# for compiling and develop setup only
# no need to specify the versions so that we could
# compile for multiple targeted versions.
setup_requires =
    torch
    ninja
install_requires =
    torch>=1.7
    monai[nibabel, skimage, pillow, tensorboard, gdown, ignite, torchvision, itk, tqdm, lmdb, psutil, openslide, fire]>=0.9.1
    uvicorn==0.17.6
    pydantic==1.9.1
    python-dotenv==0.20.0
    fastapi==0.78.0
    python-multipart==0.0.5
    requests-toolbelt==0.9.1
    httpx==0.23.0
    schedule==1.1.0
    dicomweb-client==0.56.2
    timeloop==1.0.2
    expiringdict==1.2.1
    expiring_dict==1.1.0
    cachetools==5.2.0
    watchdog==2.1.8
    pydicom==2.3.0
    pydicom-seg==0.4.0
    pynetdicom==2.0.2
    pynrrd==0.4.3
    opencv-python-headless==4.5.5.64
    numpymaxflow==0.0.2
    girder-client==3.1.14
    ninja==1.10.2.3
    einops>=0.3.2
    PyYAML==6.0
    filelock==3.7.1
    passlib==1.7.4
    python-jose[cryptography]==3.3.0
    bcrypt==3.2.2
    shapely==1.8.2

[flake8]
select = B,C,E,F,N,P,T4,W,B9
max_line_length = 120
# F403 'from module import *' used; unable to detect undefined names
# F405 Name may be undefined, or defined from star import
# E203 whitespace before ':' # incompatible with black style
# E402 module level import not at top of file
# E501 is not flexible enough, we're using B950 instead
# E722 do not use bare 'except'
# C408 ignored because we like the dict keyword argument syntax
# W503 line break before binary operator
ignore =
    E203,E302,E303,E305,E402,E501,E721,E722,E741,F403,F405,F821,F841,F999,C408,W291,W503,W504,B008,
    # N812 lowercase 'torch.nn.functional' imported as non lowercase 'F'
    N812,N818
per_file_ignores = __init__.py: F401
exclude = *.pyi,.git,.eggs,monailabel/_version.py,versioneer.py,venv,.venv,_version.py,slicer,config.py,plugins/ohif

[isort]
known_first_party = monailabel
profile = black
line_length = 120
skip = .git, .eggs, venv, .venv, versioneer.py, _version.py, conf.py, monailabel/__init__.py, plugins/ohif
skip_glob = *.pyi

[versioneer]
VCS = git
style = pep440
versionfile_source = monailabel/_version.py
versionfile_build = monailabel/_version.py
tag_prefix =
parentdir_prefix =

[mypy]
# Suppresses error messages about imports that cannot be resolved.
ignore_missing_imports = True
# Changes the treatment of arguments with a default value of None by not implicitly making their type Optional.
no_implicit_optional = True
# Warns about casting an expression to its inferred type.
warn_redundant_casts = True
# No error on unneeded # type: ignore comments.
warn_unused_ignores = False
# Shows a warning when returning a value with type Any from a function declared with a non-Any return type.
warn_return_any = True
# Prohibit equality checks, identity checks, and container checks between non-overlapping types.
strict_equality = True
# Shows column numbers in error messages.
show_column_numbers = True
# Shows error codes in error messages.
show_error_codes = True
# Use visually nicer output in error messages: use soft word wrap, show source code snippets, and show error location markers.
pretty = False
# list of files or directories to exclude.
exclude = (plugins|docs|model|tests)

[mypy-versioneer]
# Ignores all non-fatal errors.
ignore_errors = True

[mypy-monailabel._version]
# Ignores all non-fatal errors.
ignore_errors = True

[mypy-monailabel.eggs]
# Ignores all non-fatal errors.
ignore_errors = True

[pytype]
# Space-separated list of files or directories to exclude.
exclude = versioneer.py _version.py scripts plugins
# Space-separated list of files or directories to process.
inputs = monailabel
# Keep going past errors to analyze as many files as possible.
keep_going = True
# Run N jobs in parallel.
jobs = 8
# All pytype output goes here.
output = .pytype
# Paths to source code directories, separated by ':'.
pythonpath = .
# Check attribute values against their annotations.
check_attribute_types = True
# Check container mutations against their annotations.
check_container_types = True
# Check parameter defaults and assignments against their annotations.
check_parameter_types = True
# Check variable values against their annotations.
check_variable_types = True
# Comma or space separated list of error names to ignore.
disable = pyi-error
# Report errors.
report_errors = True
# Experimental: Infer precise return types even for invalid function calls.
precise_return = True
# Experimental: solve unknown types to label with structural types.
protocols = True
# Experimental: Only load submodules that are explicitly imported.
strict_import = False
